--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>This is FRONTEND</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-	<div id="root"></div>
+	<div id="root">
+        <button>Click me</button>
+        <button>Send</button>
+        <button>Lorem ipsum dolor</button>
+    </div>
 </body>
 </html>
